# python-experimentation-for-engineers

./: .gitignore  001_normal_equation.ipynb  002_ab_test.ipynb  002_ab_test.v2.ipynb  003_sample_size.md  006_bo_expected_improvement.ipynb  006_bo_probability_of_improvement.ipynb  006_bo_ucb.ipynb  007_bo_expected_improvement.ipynb  008_ab_testing.ipynb  009_anova.ipynb  02_ab_test_summary.ipynb  02_ab_testing.ipynb  02_ab_testing.v2.ipynb  03_multi_armed_bandit.ipynb  03_multi_armed_bandits.v2.ipynb  04_response_surface_methodology.ipynb  04_rsm.v2.ipynb  04_rsm_mine.ipynb  05_contextual_bandit.ipynb  05_contextual_bandit.v2.ipynb  06_bayesian_optimization.ipynb  06_bayesian_optimization.v2.ipynb  06_bayesian_optimization.v3.ipynb  06_mine.ipynb  Makefile  README.md  ab.py  bayesian_optimization.py  docs_01_zscore.md  docs_02_sample_size.md  pyproject.toml  rsm.py
docs/: 001_normal_equation.md  002_ab_test.md  002_ab_test.v2.md  006_bo_expected_improvement.md  006_bo_probability_of_improvement.md  006_bo_ucb.md  007_ab_testing.md  007_bo_expected_improvement.md  008_ab_testing.md  009_anova.md  02_ab_test_summary.md  02_ab_testing.md  02_ab_testing.v2.md  03_multi_armed_bandit.md  03_multi_armed_bandits.v2.md  04_response_surface_methodology.md  04_rsm.v2.md  04_rsm_mine.md  05_contextual_bandit.md  05_contextual_bandit.v2.md  06_bayesian_optimisation.md  06_bayesian_optimization.md  06_bayesian_optimization.v2.md  06_bayesian_optimization.v3.md  06_mine.md
