[tool.poetry]
name = "python-experimentation-for-engineers"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.6"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.1.2"
black = "^24.4.0"
isort = "^5.13.2"
jupyterlab-vim = "^4.1.3"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
tqdm = "^4.67.1"
scikit-optimize = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
